--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ body {
     padding: 24px;
     margin: 0 auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
